# RCAE

./: CMakeLists.txt  Engine.h  INTERNAL_RCAE_ARCHITECTURE.md  README.md
docs/: ENGINE_DELIVERY_SECTIONS.md
engine/core/: Engine.h  Platform.h
engine/rendering/: Renderer.cpp
engine/runtime/: FrameOrchestrator.cpp  GameRuntimeApp.cpp  GameRuntimeCAPI.cpp
engine/runtime/ecs/: ComponentReflection.h
engine/runtime/mini/: MiniEngine.cpp  MiniEngineCAPI.cpp
engine/runtime/scene/: SceneWorld.cpp
games/game_alpha/content/levels/: level_01.map  level_runtime_test.map
games/game_alpha/scripts/: DoorTrigger.cs
games/game_alpha/scripts_cpp/: HealthCpp.hpp
include/: Engine.h
include/rcae/: MiniEngine.hpp  MiniEngineCAPI.h
include/rcae/rendering/: Renderer.hpp
include/rcae/runtime/: FrameOrchestrator.hpp  GameRuntimeApp.hpp  GameRuntimeCAPI.h
include/rcae/runtime/interfaces/: RuntimeInterfaces.hpp
include/rcae/scene/: SceneWorld.hpp
tests/cpp/: test_editor.cpp  test_game_runtime_app.cpp  test_game_runtime_capi.cpp  test_mini_engine.cpp  test_mini_engine_capi.cpp  test_renderer.cpp  test_scene_world.cpp
tools/: game_runtime_demo.cpp
tools/asset_pipeline/importers/: example_texture_import.json
tools/editor/: README.md
tools/editor/workflows/selection_binding/: GameRuntimeVisualBridge.cs  MiniEngineNativeBridge.cs  SelectionBindingController.cs
tools/editor_cpp/include/rcae/: EditorApp.hpp
tools/editor_cpp/src/: EditorApp.cpp  main.cpp
tools/game_app/: main.cpp
tools/rendering/: rendering_demo.cpp
tools/scene/: scene_world_demo.cpp
